Analizador lexico/.antlr/SimpleParser.java
// Generated from c:/Users/m/Desktop/cp/compiladoresUNSE/Analizador lexico/SimpleParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, COLON=3, SEMICOLON=4, COMMA=5, OPPRIMERNIVEL=6, OPSEGUNDONIVEL=7, 
		OPTERCERNIVEL=8, OPERADORASIGNACION=9, OPERADORCOMPARACION=10, OPERADORLOGICO=11, 
		BOOLEANO=12, COMENTARIO=13, BOOLEAN=14, STRING=15, INT=16, FLOAT=17, MODULE=18, 
		NULL=19, RETURN=20, CALL=21, PRINT=22, IF=23, ELSE=24, ENDIF=25, WHILE=26, 
		ENDWHILE=27, CADENA=28, ID=29, NUMERO=30, WS=31;
	public static final int
		RULE_inicio = 0, RULE_moduloInicio = 1, RULE_nullOrNombre = 2, RULE_parametro = 3, 
		RULE_parametroRestante = 4, RULE_cuerpo = 5, RULE_cuerpo1 = 6, RULE_accion = 7, 
		RULE_si = 8, RULE_mientras = 9, RULE_variable = 10, RULE_tipo = 11, RULE_tipodato = 12, 
		RULE_tipodatonum = 13, RULE_operacion = 14, RULE_operacion1 = 15, RULE_termino = 16, 
		RULE_termino1 = 17, RULE_factor = 18, RULE_imprimir = 19, RULE_imprimir1 = 20, 
		RULE_imprimir2 = 21, RULE_llamada = 22, RULE_argumentoLl = 23, RULE_argumento = 24, 
		RULE_condicion = 25, RULE_condicion1 = 26, RULE_terminoLogico = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "moduloInicio", "nullOrNombre", "parametro", "parametroRestante", 
			"cuerpo", "cuerpo1", "accion", "si", "mientras", "variable", "tipo", 
			"tipodato", "tipodatonum", "operacion", "operacion1", "termino", "termino1", 
			"factor", "imprimir", "imprimir1", "imprimir2", "llamada", "argumentoLl", 
			"argumento", "condicion", "condicion1", "terminoLogico"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "';'", "','", "'^'", null, null, "'='", null, 
			null, null, null, "'BOOLEAN'", "'STRING'", "'INT'", "'FLOAT'", "'MODULE'", 
			"'NULL'", "'RETURN'", "'CALL'", "'PRINT'", "'IF'", "'ELSE'", "'ENDIF'", 
			"'WHILE'", "'ENDWHILE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "COLON", "SEMICOLON", "COMMA", "OPPRIMERNIVEL", 
			"OPSEGUNDONIVEL", "OPTERCERNIVEL", "OPERADORASIGNACION", "OPERADORCOMPARACION", 
			"OPERADORLOGICO", "BOOLEANO", "COMENTARIO", "BOOLEAN", "STRING", "INT", 
			"FLOAT", "MODULE", "NULL", "RETURN", "CALL", "PRINT", "IF", "ELSE", "ENDIF", 
			"WHILE", "ENDWHILE", "CADENA", "ID", "NUMERO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SimpleParser.EOF, 0); }
		public List<ModuloInicioContext> moduloInicio() {
			return getRuleContexts(ModuloInicioContext.class);
		}
		public ModuloInicioContext moduloInicio(int i) {
			return getRuleContext(ModuloInicioContext.class,i);
		}
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public List<TerminalNode> COMENTARIO() { return getTokens(SimpleParser.COMENTARIO); }
		public TerminalNode COMENTARIO(int i) {
			return getToken(SimpleParser.COMENTARIO, i);
		}
		public List<InicioContext> inicio() {
			return getRuleContexts(InicioContext.class);
		}
		public InicioContext inicio(int i) {
			return getRuleContext(InicioContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 83353600L) != 0)) {
				{
				setState(60);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MODULE:
					{
					setState(56);
					moduloInicio();
					}
					break;
				case BOOLEAN:
				case STRING:
				case INT:
				case FLOAT:
				case RETURN:
				case CALL:
				case PRINT:
				case IF:
				case WHILE:
					{
					setState(57);
					cuerpo();
					}
					break;
				case COMENTARIO:
					{
					setState(58);
					match(COMENTARIO);
					setState(59);
					inicio();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuloInicioContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(SimpleParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(SimpleParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SimpleParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(SimpleParser.RETURN, 0); }
		public NullOrNombreContext nullOrNombre() {
			return getRuleContext(NullOrNombreContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public InicioContext inicio() {
			return getRuleContext(InicioContext.class,0);
		}
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public ModuloInicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduloInicio; }
	}

	public final ModuloInicioContext moduloInicio() throws RecognitionException {
		ModuloInicioContext _localctx = new ModuloInicioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduloInicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(MODULE);
			setState(68);
			match(ID);
			setState(69);
			match(LPAREN);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 245760L) != 0)) {
				{
				setState(70);
				parametro();
				}
			}

			setState(73);
			match(RPAREN);
			setState(74);
			match(COLON);
			setState(75);
			cuerpo();
			setState(76);
			match(RETURN);
			setState(77);
			nullOrNombre();
			setState(78);
			match(SEMICOLON);
			setState(79);
			inicio();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NullOrNombreContext extends ParserRuleContext {
		public TerminalNode NULL() { return getToken(SimpleParser.NULL, 0); }
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public NullOrNombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nullOrNombre; }
	}

	public final NullOrNombreContext nullOrNombre() throws RecognitionException {
		NullOrNombreContext _localctx = new NullOrNombreContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nullOrNombre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !(_la==NULL || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public ParametroRestanteContext parametroRestante() {
			return getRuleContext(ParametroRestanteContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			tipo();
			setState(84);
			match(ID);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(85);
				parametroRestante();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroRestanteContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public ParametroRestanteContext parametroRestante() {
			return getRuleContext(ParametroRestanteContext.class,0);
		}
		public ParametroRestanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametroRestante; }
	}

	public final ParametroRestanteContext parametroRestante() throws RecognitionException {
		ParametroRestanteContext _localctx = new ParametroRestanteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametroRestante);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(COMMA);
			setState(89);
			tipo();
			setState(90);
			match(ID);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(91);
				parametroRestante();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(SimpleParser.RETURN, 0); }
		public NullOrNombreContext nullOrNombre() {
			return getRuleContext(NullOrNombreContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public List<AccionContext> accion() {
			return getRuleContexts(AccionContext.class);
		}
		public AccionContext accion(int i) {
			return getRuleContext(AccionContext.class,i);
		}
		public List<Cuerpo1Context> cuerpo1() {
			return getRuleContexts(Cuerpo1Context.class);
		}
		public Cuerpo1Context cuerpo1(int i) {
			return getRuleContext(Cuerpo1Context.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cuerpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 82034688L) != 0)) {
				{
				{
				setState(94);
				accion();
				setState(95);
				cuerpo1();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(RETURN);
			setState(103);
			nullOrNombre();
			setState(104);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cuerpo1Context extends ParserRuleContext {
		public List<TerminalNode> COMENTARIO() { return getTokens(SimpleParser.COMENTARIO); }
		public TerminalNode COMENTARIO(int i) {
			return getToken(SimpleParser.COMENTARIO, i);
		}
		public List<Cuerpo1Context> cuerpo1() {
			return getRuleContexts(Cuerpo1Context.class);
		}
		public Cuerpo1Context cuerpo1(int i) {
			return getRuleContext(Cuerpo1Context.class,i);
		}
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public Cuerpo1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo1; }
	}

	public final Cuerpo1Context cuerpo1() throws RecognitionException {
		Cuerpo1Context _localctx = new Cuerpo1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_cuerpo1);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(109);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case COMENTARIO:
						{
						setState(106);
						match(COMENTARIO);
						setState(107);
						cuerpo1();
						}
						break;
					case BOOLEAN:
					case STRING:
					case INT:
					case FLOAT:
					case RETURN:
					case CALL:
					case PRINT:
					case IF:
					case WHILE:
						{
						setState(108);
						cuerpo();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionContext extends ParserRuleContext {
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public LlamadaContext llamada() {
			return getRuleContext(LlamadaContext.class,0);
		}
		public AccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accion; }
	}

	public final AccionContext accion() throws RecognitionException {
		AccionContext _localctx = new AccionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_accion);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				si();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				mientras();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				variable();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				imprimir();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				llamada();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SiContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SimpleParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(SimpleParser.LPAREN, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SimpleParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public TerminalNode ENDIF() { return getToken(SimpleParser.ENDIF, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode ELSE() { return getToken(SimpleParser.ELSE, 0); }
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_si);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IF);
			setState(122);
			match(LPAREN);
			setState(123);
			condicion();
			setState(124);
			match(RPAREN);
			setState(125);
			match(COLON);
			setState(126);
			cuerpo();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(127);
				match(ELSE);
				setState(128);
				cuerpo();
				}
			}

			setState(131);
			match(ENDIF);
			setState(132);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(SimpleParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(SimpleParser.LPAREN, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SimpleParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode ENDWHILE() { return getToken(SimpleParser.ENDWHILE, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(WHILE);
			setState(135);
			match(LPAREN);
			setState(136);
			condicion();
			setState(137);
			match(RPAREN);
			setState(138);
			match(COLON);
			setState(139);
			cuerpo();
			setState(140);
			match(ENDWHILE);
			setState(141);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode OPERADORASIGNACION() { return getToken(SimpleParser.OPERADORASIGNACION, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			tipo();
			setState(144);
			match(ID);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPERADORASIGNACION) {
				{
				setState(145);
				match(OPERADORASIGNACION);
				setState(146);
				operacion();
				}
			}

			setState(149);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TipodatonumContext tipodatonum() {
			return getRuleContext(TipodatonumContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tipo);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				tipodato();
				}
				break;
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				tipodatonum();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipodatoContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(SimpleParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(SimpleParser.BOOLEAN, 0); }
		public TipodatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodato; }
	}

	public final TipodatoContext tipodato() throws RecognitionException {
		TipodatoContext _localctx = new TipodatoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_tipodato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_la = _input.LA(1);
			if ( !(_la==BOOLEAN || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipodatonumContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(SimpleParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(SimpleParser.FLOAT, 0); }
		public TipodatonumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipodatonum; }
	}

	public final TipodatonumContext tipodatonum() throws RecognitionException {
		TipodatonumContext _localctx = new TipodatonumContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_tipodatonum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperacionContext extends ParserRuleContext {
		public TerminoContext termino() {
			return getRuleContext(TerminoContext.class,0);
		}
		public Operacion1Context operacion1() {
			return getRuleContext(Operacion1Context.class,0);
		}
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_operacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			termino();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTERCERNIVEL) {
				{
				setState(160);
				operacion1();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Operacion1Context extends ParserRuleContext {
		public TerminalNode OPTERCERNIVEL() { return getToken(SimpleParser.OPTERCERNIVEL, 0); }
		public TerminoContext termino() {
			return getRuleContext(TerminoContext.class,0);
		}
		public Operacion1Context operacion1() {
			return getRuleContext(Operacion1Context.class,0);
		}
		public Operacion1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion1; }
	}

	public final Operacion1Context operacion1() throws RecognitionException {
		Operacion1Context _localctx = new Operacion1Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_operacion1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(OPTERCERNIVEL);
			setState(164);
			termino();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTERCERNIVEL) {
				{
				setState(165);
				operacion1();
				}
			}
